# maddy-cli

./: .gitmodules  meson.build  readme.md
.github/workflows/: build.yml
src/: main.cpp
